--- a/Lab01.vcxproj
+++ b/Lab01.vcxproj
@@ -103,6 +103,11 @@
     <ClCompile Include="uiInteract.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="board.h" />
+    <ClInclude Include="piece.h" />
+    <ClInclude Include="position.h" />
+    <ClInclude Include="testBoard.h" />
+    <ClInclude Include="testPiece.h" />
     <ClInclude Include="uiDraw.h" />
     <ClInclude Include="uiInteract.h" />
   </ItemGroup>
