--- a/Lab01.vcxproj
+++ b/Lab01.vcxproj
@@ -104,9 +104,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="board.h" />
+    <ClInclude Include="king.h" />
+    <ClInclude Include="move.h" />
+    <ClInclude Include="pawn.h" />
     <ClInclude Include="piece.h" />
     <ClInclude Include="position.h" />
     <ClInclude Include="testBoard.h" />
+    <ClInclude Include="testKing.h" />
+    <ClInclude Include="testPawn.h" />
     <ClInclude Include="testPiece.h" />
     <ClInclude Include="uiDraw.h" />
     <ClInclude Include="uiInteract.h" />
