--- a/Lab01.vcxproj
+++ b/Lab01.vcxproj
@@ -98,8 +98,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="board.cpp" />
     <ClCompile Include="chess.cpp" />
     <ClCompile Include="move.cpp" />
+    <ClCompile Include="pawn.cpp" />
+    <ClCompile Include="piece.cpp" />
+    <ClCompile Include="position.cpp" />
     <ClCompile Include="uiDraw.cpp" />
     <ClCompile Include="uiInteract.cpp" />
   </ItemGroup>
