--- a/Lab01.vcxproj
+++ b/Lab01.vcxproj
@@ -104,6 +104,7 @@
     <ClCompile Include="pawn.cpp" />
     <ClCompile Include="piece.cpp" />
     <ClCompile Include="position.cpp" />
+    <ClCompile Include="King.cpp" />
     <ClCompile Include="uiDraw.cpp" />
     <ClCompile Include="uiInteract.cpp" />
   </ItemGroup>
