--- a/Lab01.vcxproj
+++ b/Lab01.vcxproj
@@ -110,6 +110,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="board.h" />
+    <ClInclude Include="space.h" />
     <ClInclude Include="king.h" />
     <ClInclude Include="move.h" />
     <ClInclude Include="pawn.h" />
