--- a/Lab01.vcxproj.filters
+++ b/Lab01.vcxproj.filters
@@ -86,6 +86,9 @@
     <ClInclude Include="rook.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="space.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
