Add queen moves

--- a/Lab01.vcxproj
+++ b/Lab01.vcxproj
@@ -123,6 +123,7 @@
     <ClInclude Include="testKing.h" />
     <ClInclude Include="testPawn.h" />
     <ClInclude Include="testPiece.h" />
+    <ClInclude Include="testQueen.h" />
     <ClInclude Include="uiDraw.h" />
     <ClInclude Include="uiInteract.h" />
   </ItemGroup>
