--- a/Lab01.vcxproj.filters
+++ b/Lab01.vcxproj.filters
@@ -95,6 +95,9 @@
     <ClInclude Include="queen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="testQueen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
