--- a/Lab01.vcxproj.filters
+++ b/Lab01.vcxproj.filters
@@ -98,6 +98,12 @@
     <ClInclude Include="testQueen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="knight.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="bishop.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
