Added .cpp files for missing pieces. Added code for movement and proper deltas. Created unique getmoves function for knight (since it can jump pieces and cant use slide)

--- a/Lab01.vcxproj.filters
+++ b/Lab01.vcxproj.filters
@@ -48,6 +48,15 @@
     <ClCompile Include="queen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="rook.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="bishop.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="knight.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="uiDraw.h">
