Added one too much stuff to be justified in one commit.... Created game class, created functions for game class, implemented capture mechanics, implemented game win checks, fixed piece spawings on the board, made turns etc...

--- a/Lab01.vcxproj.filters
+++ b/Lab01.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="knight.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="game.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="uiDraw.h">
@@ -111,6 +114,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="bishop.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="game.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
