--- a/Lab01.vcxproj
+++ b/Lab01.vcxproj
@@ -101,6 +101,7 @@
     <ClCompile Include="bishop.cpp" />
     <ClCompile Include="board.cpp" />
     <ClCompile Include="chess.cpp" />
+    <ClCompile Include="game.cpp" />
     <ClCompile Include="knight.cpp" />
     <ClCompile Include="move.cpp" />
     <ClCompile Include="pawn.cpp" />
@@ -115,6 +116,7 @@
   <ItemGroup>
     <ClInclude Include="bishop.h" />
     <ClInclude Include="board.h" />
+    <ClInclude Include="game.h" />
     <ClInclude Include="knight.h" />
     <ClInclude Include="queen.h" />
     <ClInclude Include="space.h" />
