Added the capture mechanic to knights.

--- a/Lab01.vcxproj
+++ b/Lab01.vcxproj
@@ -116,6 +116,7 @@
   <ItemGroup>
     <ClInclude Include="bishop.h" />
     <ClInclude Include="board.h" />
+    <ClInclude Include="game.h" />
     <ClInclude Include="testBishop.h" />
     <ClInclude Include="testRook.h" />
     <ClInclude Include="testKnight.h" />
