--- a/Lab01.vcxproj.filters
+++ b/Lab01.vcxproj.filters
@@ -125,6 +125,9 @@
     <ClInclude Include="testBishop.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="game.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
